tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__HVEnergyHatch-AAAAAAAAAAAAAAAAAAAHbw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1903,
  "prerequisites": [
    770,
    1236,
    990,
    5904854098621854054
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The HV energy hatch is crucial to a faster EBF that can do higher tier recipes. You will probably want to make at least two.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHV Energy Hatch",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    770,
    1236,
    990,
    5904854098621854054
  ],
  "rewards": [],
  "tasks": []
}
