tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__HVSuperconductor-AAAAAAAAAAAAAAAAAAAFfQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1405,
  "prerequisites": [
    860,
    79
  ],
  "properties": {
    "auto_claim": false,
    "desc": "How about lossless 512 EU Wires? Titaniumonabariumdecacoppereikosaoxide is a superconductor wire and will transfer your energy without any loss.\n\nYou'll need Nichrome Coils and an HV Assembler.\n\n[note]Whether these are worth it to save a little power or not is up to you of course.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHV Superconductors (512 EU/t)",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    860,
    79
  ],
  "rewards": [],
  "tasks": []
}
