tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__HotSlurry-AAAAAAAAAAAAAAAAAAALoQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2977,
  "prerequisites": [
    2978,
    2236957356656069826
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Then heat up the slurry you made with a Fluid Heater.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHot Slurry",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2978,
    2236957356656069826
  ],
  "rewards": [],
  "tasks": []
}
