tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__HowMuchisTooMuch-AAAAAAAAAAAAAAAAAAAHdQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1909,
  "prerequisites": [
    1871
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A super chest III is just ridiculous. Who would possibly need to store 16 million items? You, that's who.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lHow Much is Too Much Cobblestone?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1871
  ],
  "rewards": [],
  "tasks": []
}
