tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__IntegratedProces-AAAAAAAAAAAAAAAAAAAD-A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1016,
  "prerequisites": [
    1015,
    1018
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This is the start of the first 4-circuit circuit line. This one doesn't really have a consistent naming scheme unlike the later ones, but it still works the same way, aside from the fact that you get your first EV §oand§r IV circuits from it, all the rest only have 1 new tier of circuit. Because of this you'll need to make 2 new CAs to finish it.\n\nThe first one is the Integrated Processor, the final type of MV circuits. You also don't need to craft any other circuits to make it, so it's the cheapest. This repeats each circuit tier.\n\n[note]This and all circuits past it need a cleanroom.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lIntegrated Processor",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1015,
    1018
  ],
  "rewards": [],
  "tasks": []
}
