tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier3HV-AAAAAAAAAAAAAAAAAAAABQ==__Keepingyourenerg-pXRqb1HyQYSjtHp9dt1xZg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 5904854098621854054,
  "optional_prerequisites": [
    81,
    13289084511699651718
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "You have two options here. Either you followed the NaK quests or you made a vacuum freezer to cool helium.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§9§lKeeping your energy hatch from overheating",
    "party_single_reward": null,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
